添加几个模板消息rpc方法
